2006-07-28  Mark Wielaard  <mark@klomp.org>

	* Ptrace.java (poke): Change data parameter from int to long.
	* cni/Ptrace.cxx (poke): Likewise.

2006-07-17  Tim Moore  <moore@redhat.com>

	* Ptrace.java (peek): Change return type of peek to long.
	* cni/Ptrace.cxx (peek): ditto

2006-07-14  Mark Wielaard  <mark@klomp.org>

	* cni/Wait.cxx (waitAll): Save errno before calling log().

2006-07-10  Tim Moore  <timoore@redhat.com>

	* cni/PtraceByteBuffer.cxx (peek, poke): Change the type of data read
	from / written to ptrace from int to long, corresponding to its
	declared type in the ptrace prototype.

2006-07-04  Mark Wielaard  <mark@klomp.org>

	* frysk-sys/frysk/sys/TestPtraceByteBuffer.java
	(testTextVariable): Make sure we are manipulating only the child
	text area not our own.

2006-06-26  Mark Wielaard  <mark@klomp.org>

	* frysk-sys/frysk/sys/TestPtraceByteBuffer.java: New test.
	* frysk-sys/frysk/sys/TestLib.java (intVal, byteVal, longVal):
	New static fields.
	(getIntValAddr, getByteValAddr, getLongValAddr): New native methods.
	(getFuncAddr): Likewise.
	(getFuncBytes): Likewise.
	* frysk-sys/frysk/sys/cni/TestLib.cxx
	(dummyfunc): New static function.
	(getIntValAddr, getByteValAddr, getLongValAddr): New method.
	(getFuncAddr): Likewise.
	(getFuncBytes): Likewise.

	* frysk-sys/frysk/sys/cni/PtraceByteBuffer.cxx (peek): Use off when
	storing bytes.

2006-06-19  Mike Cvet  <mcvet@redhat.com>

	* TestCallPtrace.java (testChildContinue): Finalized tests
	(getPt): Set the ptrace thread to a daemon thread so that Frysk exits
	properly.

2006-06-16  Mike Cvet  <mcvet@redhat.com>

	* PtraceByteBuffer.java: Moved over to frysk/sys.
	* PtraceByteBuffer.cxx: Moved over to frysk/sys/cni; fixes to use the new
	ptrace thread implementation - fixes #2783.
	* funit-threadexit.c: Removed race condition.
	* TestTaskTerminatedObserver.java: TestTerm now stops when the task dies
	as opposed to timing out.
	* TestLib.Java: Added print statement if event loop is not stopped.